<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuideMeBack</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_quick_save">Quick save</string>
    <string name="menu_quick_save_home">Home</string>
    <string name="menu_quick_save_car">Car</string>
    <string name="menu_quick_save_hotel">Hotel</string>
    <string name="menu_stored_locations">Stored locations</string>
    <string name="menu_manage_locations">Manage locations</string>
    <string name="menu_debug">Debug</string>
    <string name="title_activity_guide_me_back_main">GuideMeBack</string>
    <string name="emptyString"></string>
    <string name="hello_world">Hello world!</string>
    <string name="speedLabel">Speed</string>
    <string name="distanceLabel">Distance</string>
    <string name="speedunits">Km/h</string>
    <string name="keepLevel">Hou toestel horizontaal</string>
    <string name="title_activity_debug">Debug</string>
    <string name="debug_currentPosition">Current position:</string>
    <string name="debug_destinationPosition">Destination position:</string>
    <string name="debug_distanceLabelText">Distance to destination:</string>
    <string name="debug_quickSaveButtonLabel">Quick Save</string>
    <string name="debug_loadSavedPositionButtonLabel">Load position</string>
    <string name="debug_speedLabel">Speed:</string>
    <string name="debug_arrowDescription">Arrow description</string>
    <string name="title_activity_locations">LocationsActivity</string>

</resources>